--- a/index.html
+++ b/index.html
@@ -7,28 +7,26 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/style.css">
     <title>Countdown Timer</title>
+    <script src="./main.js" defer></script>
 </head>
 <body>
     <nav class="navbar bg-body-tertiary">
         <div class="container-fluid">
             <div id="time-section" >
                 <div id="timer" >
-                    <span class="display-time" id="hours">00</span>
-                    <span class="display-time">:</span>
-                    <span class="display-time" id="minutes">00</span>
-                    <span class="display-time">:</span>
-                    <span class="display-time" id="seconds">00</span>
+                    <span id="timer-display">00:25:00</span>
                 </div>
 
                 <div class="timer-btns" >
-                    <button class="btn btn-light btn-outline-secondary btn-rounded ">Start</button>
-                    <button class="btn btn-primary  btn-outline-primary btn-rounded">Reset</button>
+                    <button id="startBtn" class="btn btn-light btn-outline-secondary btn-rounded">Start</button>
+                    <button id="resetBtn" class="btn btn-primary  btn-outline-primary btn-rounded">Reset</button>
                 </div>
             </div>
 
             <div class="customized-sec" >
-                <p id="cutom-p">Timer1 : </p>
-                <a class="edit-btn text-decoration-none" href=""><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pen" viewBox="0 0 16 16">
+                <p id="cutom-p">Timer1</p>
+                (<p id="timer-edit">00:25:00</p>)
+                <a id="editBtn" class="edit-btn text-decoration-none"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pen" viewBox="0 0 16 16">
                     <path d="m13.498.795.149-.149a1.207 1.207 0 1 1 1.707 1.708l-.149.148a1.5 1.5 0 0 1-.059 2.059L4.854 14.854a.5.5 0 0 1-.233.131l-4 1a.5.5 0 0 1-.606-.606l1-4a.5.5 0 0 1 .131-.232l9.642-9.642a.5.5 0 0 0-.642.056L6.854 4.854a.5.5 0 1 1-.708-.708L9.44.854A1.5 1.5 0 0 1 11.5.796a1.5 1.5 0 0 1 1.998-.001zm-.644.766a.5.5 0 0 0-.707 0L1.95 11.756l-.764 3.057 3.057-.764L14.44 3.854a.5.5 0 0 0 0-.708l-1.585-1.585z"/>
                   </svg> Edit</a>
             </div>
