added sound when timer stops

--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
     <link rel="stylesheet" href="./style.css" />
     <title>Countdown Timer</title>
     <script src="./main.js" defer></script>
+    <audio id="timerSound">
+      <source
+        src="./assets/mixkit-score-casino-counter-1998.wav"
+        type="audio/mpeg"
+      />
+      Your browser does not support the audio element.
+    </audio>
   </head>
   <body>
     <nav class="navbar bg-body-tertiary">
